--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "my-election-backend",
+  "name": "election-backend",
   "version": "1.0.0",
-  "description": "my local backend",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo \"Building the project...\""
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+},
+
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Emmytweg/election-backend.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Emmytweg/election-backend/issues"
+  },
+  "homepage": "https://github.com/Emmytweg/election-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
